--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
     font-family: rubik-reguler;
     src: url(/asset/fonts/Rubik-Regular.ttf);
 }
+body {
+    background-color: #212529;
+}
 .navbar-brand{
     font-family: rubik-bold;
     font-size: 25px;
@@ -17,11 +20,11 @@
 #navbar-link a{
     font-size: 20px;
     font-family: rubik-medium;
-    transition: 0.25s;
+    transition: 0.5ss;
 }
 #navbar-link a:hover {
     padding: 8px;
-    background-color: rgb(0, 102, 255);
+    background-color: #0066ff;
     border-radius: 5px;
 }
 .jumbotron {
@@ -55,6 +58,7 @@
     color: white;
 }
 .contact svg{
+    transition: 0.7s;
     color: white;
     width: 50px;
     height: 25px;
@@ -62,8 +66,54 @@
 .button button{
     font-family: rubik-medium;
 }
+.contact svg:hover {
+    color: rgb(13, 110, 255);
+}
+#about {
+    background-color: #0066ff;
+}
+#about img{
+    width: 350px;
+}
+.about{
+    width: 100%;
+    height: 400px;
+}
+#about h2{
+    font-family: rubik-bold;
+}
+#about p{
+    text-align: justify;
+    line-height: 20px;
+    font-family: rubik-reguler;
+}
+#about p b{
+    background: -webkit-linear-gradient(rgb(255, 139, 6), rgb(255, 77, 0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
 @media screen and (max-width: 768px) and (min-width: 320px) {
     .jumbotron img{
         display: none;
     }
+}
+.card {
+    background-color: #323232;
+    box-shadow: 0px 0px 10px 0px black;
+    width: 180px;
+    height: 300px;
+}
+.card img{
+    padding: 50px;
+}
+#skill h1 {
+    font-family: rubik-bold;
+    color: white;
+}
+footer {
+    font-family: rubik-medium;
+    background-color: #0066ff;
+    color: white;
 }
