--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 }
 
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and (max-width: 600px){
     .jumbotron img{
         display: none;
     }
